objects/MedProSC__MedProPass2DisplayHeadConfig__c.object
<CustomObject>
    <description>A custom object for maintaining the system wide configuration settings for how custom rendered &quot;Pass 2&quot; results are displayed (at a header/accordion level)</description>
    <fields>
        <fullName>MedProSC__IsVisible__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Controls if the configuration (a.k.a the accordion) is visible</inlineHelpText>
        <label>IsVisible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__MedPro_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The associated MedPro Customer for this configuration</inlineHelpText>
        <label>MedPro Customer</label>
        <referenceTo>MedProSC__MedProCustomer__c</referenceTo>
        <relationshipLabel>MedPro Detail Page Configurations</relationshipLabel>
        <relationshipName>MedPro_Pass_2_Display_Head_Configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MedProSC__Ordinal_Position__c</fullName>
        <inlineHelpText>Numeric value allows the configuration to be reordered relative to other configurations</inlineHelpText>
        <label>Ordinal Position</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedProSC__ReOrdering_Mode__c</fullName>
        <inlineHelpText>Specifies the re-ordering mode for elements (children) associated with this configuration</inlineHelpText>
        <label>ReOrdering Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Straight Replace ReOrdering</fullName>
                </value>
                <value>
                    <fullName>Queue Based ReOrdering</fullName>
                    <default>true</default>
                    <label>Queue Based ReOrdering</label>
                </value>
                <value>
                    <fullName>No Restriction ReOrdering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MedProSC__SyncReOrderFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SyncReOrderFlag</label>
        <type>Checkbox</type>
    </fields>
    <label>MedPro Detail Page Configuration</label>
    <nameField>
        <label>Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MedPro Detail Page Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>